# TaDGENS

./: .gitignore  CMakeLists.txt  Readme.md  TAGS
doc/: tadgens.dox  tadgens_doxygen.cfg
doc/theory/: euler.tex  implementation.tex  presentation.tex  proposal.tex  refs.bib  report.tex
src/: CMakeLists.txt  aanalyticalfluxes.hpp  aarray2d.hpp  aconstants.hpp  aelements.cpp  aelements.hpp  aeulerflux.hpp  aexplicitsolver.cpp  aexplicitsolver.hpp  amatrix.hpp  amesh2dh.cpp  amesh2dh.hpp  anumericalflux.cpp  anumericalflux.hpp  anumericalfluxeuler.hpp  aodecoeffs.hpp  aoutput.cpp  aoutput.hpp  aquadrature.cpp  aquadrature.hpp  areconstruction.cpp  areconstruction.hpp  asolverbase.cpp  asolverbase.hpp  asolverexplicitsteady.cpp  asolverexplicitsteady.hpp  asolversteady.cpp  asolversteady.hpp  aspatial.cpp  aspatial.hpp  aspatialadvection.cpp  aspatialadvection.hpp  aspatialeuler.cpp  aspatialeuler.hpp  aspatialpoisson.cpp  aspatialpoisson.hpp  atimesteady.cpp  atimesteady.hpp  atimetvdrk.hpp  atvdrkcoeffs.hpp  (+13 more)
src/fem/: aelements.cpp  aelements.hpp  aquadrature.cpp  aquadrature.hpp
src/mesh/: amesh2dh.cpp  amesh2dh.hpp
src/pde/: pde.hpp
src/solvers/: alinalg.cpp  alinalg.hpp  asolversteady.hpp  atimesteady.cpp  atimesteady.hpp
src/spatial/: anumericalfluxeuler.cpp  aoutput.cpp  aoutput.hpp  areconstruction.hpp  aspatial.cpp  aspatial.hpp  aspatialadvection.cpp  aspatialadvection.hpp  aspatialeuler.cpp  aspatialeuler.hpp  aspatialpoisson.cpp  aspatialpoisson.hpp  aspatialpoisson_continuous.cpp  aspatialpoisson_continuous.hpp  spatialfactory.hpp
src/time/: aodecoeffs.hpp  atimetvdrk.cpp  atimetvdrk.hpp
src/unittests/: .fuse_hidden000029e700000001  .fuse_hidden000029ed00000002  .fuse_hidden000029f400000003  .fuse_hidden00002a0100000004  .fuse_hidden00002a0800000005  .fuse_hidden00002a0f00000006  element  makefile  testelement.cpp  testelementtri.cpp  testmat.cpp  testmesh.cpp
src/utilities/: 1dquadraturerules.txt  CMakeLists.txt  aarray2d.hpp  adatastructures.hpp  grid_conv_steady.cpp
testcases/: ploterr.py  ploterr2.py
testcases/advection/: advect.control  errors.txt  errs-taylor-quad-p2q1.txt  errs-taylor-tri-p2q1.txt  lagrange-quad-p1.txt  quad-dofs-p2.txt  quad-p1.txt  quad-p2-2.txt  quad-p2.txt  taylor-quad-p1.txt  tri-dofs-p2.txt  tri-p1.txt  tri-p2-2.txt  unsteady-advect.control
testcases/advection/grids/: square-p2-0.msh  square-p2-1.msh  square-p2-2.msh  square.geo  square0.msh  square1.msh  square2.msh  square3.msh  square4.msh  square5.msh  square6.msh  squarequad-p2-1.msh  squarequad-p2-3.msh  squarequad0.msh  squarequad1.msh  squarequad2.msh  squarequad3.msh  squarequad4.msh
testcases/advection/output/: l-quad-p1.txt  l-quad-p2.txt  l-tri-p1.txt  l-tri-p2.txt
testcases/poisson-square/: errors.txt  poisson.control  square.geo  square0.msh  square1.msh  squarequad0.msh  squarequad1.msh  squarequad2.msh  squarequad3.msh
testcases/poisson-square/grids/: square2.msh  square3.msh  squaretri0.msh
testcases/unittests/: circlehybrid_p2.msh  circlequad_p2.msh  squarequad2.msh  testhybrid2.msh  trimesh.msh
tests/: CMakeLists.txt  ploterr2.py
tests/2dcylinder-hybrid/: 2dcylinderhybrid.geo
tests/advection/: CMakeLists.txt  advect-l-quad.control  advect-l.control  advect-t-struct.control  advect-t.control  square-quad.geo  square-struct.geo  square-tri.geo  unsteady-advect.control
tests/advection-ellipseboundary/: CMakeLists.txt  advect-l-p1.control  advect-l-p2.control  advect-t-p2.control  square-ellipse.geo
tests/advection/grids/: squarequad-p2-0.msh  squarequad-p2-2.msh
tests/common_inputs/: CMakeLists.txt  trimesh-skew.msh  trimesh-skew_p2.msh
tests/fem/: CMakeLists.txt  testelementtri.cpp
tests/poisson/: CMakeLists.txt  aspatialpoisson_continuous.cpp  aspatialpoisson_continuous.hpp  errors-cg.txt  errors-sip.txt  errors.txt  poisson-continuous-quad.control  poisson-continuous-tri.control  poisson.control  poissonC.cpp
tests/poisson/grids/: square-tri.geo  square.geo  squaretest0.msh
